--- a/student/package.json
+++ b/student/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react_webpack_antddesign",
   "version": "1.0.0",
-  "description": "一个reactUI库实现前端界面及其逻辑，webpack模块管理工具实现模块管理，antdDesign是一个蚂蚁金服的UI框架.",
+  "description": "基于react和node的学生宿舍管理系统",
   "main": "index.jsx",
   "scripts": {
     "start": "cross-env NODE_ENV=development node ./server/server.js",
@@ -14,7 +14,7 @@
     "antd",
     "design"
   ],
-  "author": "huhao",
+  "author": "weihongfu",
   "license": "MIT",
   "devDependencies": {
     "antd": "^3.0.0",
@@ -52,6 +52,8 @@
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
     "isomorphic-fetch": "^2.2.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
     "loglevel": "^1.6.0",
     "mocha": "^4.0.1",
