增加基本信息的相关界面布局，增加登录界面

--- a/student/package.json
+++ b/student/package.json
@@ -85,5 +85,8 @@
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1",
     "zlib": "^1.0.5"
+  },
+  "dependencies": {
+    "mysql": "^2.15.0"
   }
 }
