--- a/student/package.json
+++ b/student/package.json
@@ -87,6 +87,7 @@
     "zlib": "^1.0.5"
   },
   "dependencies": {
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "react-infinite-scroller": "^1.1.3"
   }
 }
